fix amqp-cron comment, use pre-wrap for fun-types pre tag

--- a/doc/edoc-template/css/main.css
+++ b/doc/edoc-template/css/main.css
@@ -392,7 +392,7 @@
 .type-spec pre {
     margin: 0;
     word-break: break-word;
-    white-space: pre-line;
+    white-space: pre-wrap;
 }
 
 .localdefs {
